<resources>
    <string name="app_name">VegiApp</string>
    <string name="vegi">vegi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="VEGI">VEGI</string>
    <string name="the_all_in_one_food_shop">THE ALL IN ONE FOOD SHOP</string>
    <string name="add">Add</string>
    <string name="_1">1</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="search_categories">search categories</string>
    <string name="home">Home</string>
    <string name="cart">cart</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="ratings_reviews">Ratings Reviews</string>
    <string name="faqs">FAQs</string>
    <string name="terms_condition">Terms Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="call_us_91">Call Us: +91</string>
    <string name="_1234567890">1234567890</string>
    <string name="mail_us">Mail us:</string>
    <string name="retrytech_gmail_com">retrytech@gmail.com</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="by_signing_in_you_agreeing_to_our">By Signing in you agreeing to our</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="my_orders">My Orders</string>
    <string name="my_delivery_address">My Delivery Address</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="complaint">Complaint</string>
    <string name="refer_this_app">Refer This App</string>
    <string name="log_out">Log out</string>
</resources>