<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.example.vegiapp.model.Register.Data" />

    </data>

    <LinearLayout
        android:id="@+id/btn_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal">

            <!--  app:civ_fill_color="#D5CCC9"-->

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:padding="5dp"
                app:civ_fill_color="#D5CCC9"
                android:src="@color/cardview_dark_background"
                app:civ_border_color="@color/orange"
                app:civ_border_width="5dp"/>

            <LinearLayout
                android:id="@+id/ll_name"
                android:layout_marginStart="15dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Retry"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:ellipsize="end"
                    tools:text="Retry@gmail.com"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>
            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_gradient_10"
                android:backgroundTint="@color/orange"
                android:src="@drawable/ic_baseline_create_24"
                app:tint="@color/white" />

        </LinearLayout>

        <View
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="10dp"
            android:background="#A8A2A2"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/btn_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="top"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_shopping_bag_24"
                app:tint="@color/orange" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_orders"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <ImageView
                tint="@color/black"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

        </LinearLayout>

        <View
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="10dp"
            android:background="#A8A2A2"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/tool_Bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_location_on_24"
                app:tint="@color/orange" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_delivery_address"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <ImageView
                tint="@color/black"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

        </LinearLayout>

        <View
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="10dp"
            android:background="#A8A2A2"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/btn_wishlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_favorite_24"
                app:tint="@color/orange" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_wishlist"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <ImageView
                tint="@color/black"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

        </LinearLayout>

        <View
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="10dp"
            android:background="#A8A2A2"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/btn_complaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_connect_without_contact_24"
                app:tint="@color/orange" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complaint"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <ImageView
                tint="@color/black"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

        </LinearLayout>

        <View
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="10dp"
            android:background="#A8A2A2"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_link_24"
                app:tint="@color/orange" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refer_this_app"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <ImageView
                tint="@color/black"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

        </LinearLayout>

        <View
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="10dp"
            android:background="#A8A2A2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_logout_24"
                app:tint="@color/orange" />

            <TextView
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:gravity="bottom"
                android:text="@string/log_out"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>
</layout>